--- a/mtstest/src/styles/_variables.scss
+++ b/mtstest/src/styles/_variables.scss
@@ -2,3 +2,7 @@ $mainBg: #F2F2F2;
 $headerBg: #fff;
 $textColor: #001424;
 $menuActive: #E30611;
+
+$searchBorder: #E2E5EB;
+$searchPlacehloder: #9198A0;
+$btnBg: #E30611;
