--- a/mtstest/src/styles/_main.scss
+++ b/mtstest/src/styles/_main.scss
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     background-color: $mainBg;
     font-size: 14px;
@@ -15,6 +18,7 @@ body{
 .wrapper{
     max-width: 830px;
     margin: 0 auto;
+    padding: 50px 0;
 }
 
 .d-flex{
@@ -34,4 +38,10 @@ body{
 }
 .ml-auto{
     margin-left: auto;
+}
+
+.h1{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 30px;
 }
