--- a/mtstest/src/styles/_main.scss
+++ b/mtstest/src/styles/_main.scss
@@ -19,6 +19,10 @@ body{
     max-width: 830px;
     margin: 0 auto;
     padding: 50px 0;
+    
+    @media all and (max-width: $mediaMD){
+        padding: 15px 0;
+    }
 }
 
 .d-flex{
@@ -44,4 +48,18 @@ body{
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
+
+    @media all and (max-width: $mediaMD){
+        font-size: 22px;
+        margin-bottom: 15px;
+    }
+}
+.h3{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 15px;
+
+    @media all and (max-width: $mediaMD){
+        font-size: 16px;
+    }
 }
