--- a/mtstest/src/styles/_variables.scss
+++ b/mtstest/src/styles/_variables.scss
@@ -6,3 +6,6 @@ $menuActive: #E30611;
 $searchBorder: #E2E5EB;
 $searchPlacehloder: #9198A0;
 $btnBg: #E30611;
+
+$cardColor1: #979797;
+$cardColor2: #EBF4FE;
