--- a/mtstest/src/styles/styles.scss
+++ b/mtstest/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/reset-css/sass/_reset";
 @import "./_fonts";
 @import "./_variables";
+@import "./_media";
 @import "./_main";
