--- a/cartabanta/src/scss/base/fonts.scss
+++ b/cartabanta/src/scss/base/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Exo 2.0';
-    src: url('../assets/fonts/Exo20-Regular.woff2') format('woff2'),
-        url('../assets/fonts/Exo20-Regular.woff') format('woff');
+    src: url('../../assets/fonts/Exo20-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/Exo20-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Exo 2.0';
-    src: url('../assets/fonts/Exo20-Bold.woff2') format('woff2'),
-        url('../assets/fonts/Exo20-Bold.woff') format('woff');
+    src: url('../../assets/fonts/Exo20-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/Exo20-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -18,16 +18,16 @@
 
 @font-face {
     font-family: 'Exo 2.0';
-    src: url('../assets/fonts/Exo20-Medium.woff2') format('woff2'),
-        url('../assets/fonts/Exo20-Medium.woff') format('woff');
+    src: url('../../assets/fonts/Exo20-Medium.woff2') format('woff2'),
+        url('../../assets/fonts/Exo20-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Exo 2.0';
-    src: url('../assets/fonts/Exo20-SemiBold.woff2') format('woff2'),
-        url('../assets/fonts/Exo20-SemiBold.woff') format('woff');
+    src: url('../../assets/fonts/Exo20-SemiBold.woff2') format('woff2'),
+        url('../../assets/fonts/Exo20-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
