--- a/cartabanta/src/scss/modules/main.scss
+++ b/cartabanta/src/scss/modules/main.scss
@@ -172,7 +172,7 @@
 
 }
 .banner{
-    background: url(../assets/img/bg.svg) no-repeat center center;
+    background: url(../../assets/img/bg.svg) no-repeat center center;
     background-size: cover;
     position: relative;
     padding: 218px 0 241px;
